# CompanyPortal

./: .env  .env.example  .env.production  .replit  app_old.py  build.sh  config.py  drizzle.config.ts  generate-hash.js  main.py  models.py  package-lock.json  package.json  pyproject.toml  replit.json  replit.nix  requirements.txt  routes.py  test-bcrypt.js  tsconfig.json  vercel.json  vite.config.ts
app/: __init__.py
attached_assets/: Pasted--May-31-00-48-19-93-GET-company-portal-2gb8aemft-cirkuitrys-projects-vercel-app-favicon-ic-1748632787078.txt  Pasted-May-31-00-32-55-75-GET-500-company-portal-tau-vercel-app-Error-ERR-MODULE-NOT-FOUND-Cannot-1748632029721.txt  Pasted-The-error-now-is-ModuleNotFoundError-No-module-named-companyportal-This-means-Gunicorn-canno-1749294850025_1749294850026.txt  Pasted-var-defProp-Object-defineProperty-var-export-target-all-for-var-name-in-all--1748630223823.txt  Pasted-var-defProp-Object-defineProperty-var-export-target-all-for-var-name-in-all--1749208011431.txt  Pasted-var-defProp-Object-defineProperty-var-export-target-all-for-var-name-in-all--1749208868562.txt
backend/: auth.ts  database.ts  db-config.ts  index.ts  routes.ts  vite.ts
data/: app.db
migrations/: env.py
python-backend/: main.py
scripts/: create-admin.ts  create-content-tables.ts  create-sample-workflow.ts  db-push.js  fix-expenses.ts  init-db.ts  init-sqlite-db.js  push-db.js  setup-db.sh  setup-db.ts  update-admin-password.js  view-expenses.ts  view-users.ts  view_users.py
server/: auth.ts  database.ts  db-config.ts  db.ts  index.ts  routes.ts  storage.ts  (+1 more)
(+109 files in other folders)
